Fix Display misalignment

--- a/style.css
+++ b/style.css
@@ -15,25 +15,35 @@ body{
     flex-direction: column;
     background-color: black;
     width: 50%;
-    
+    min-width: 249px;
     padding: 16px;
     min-height: 250px;
     height:75%;
 }
 
-.display{
+.display-external{
 display: flex;
-justify-content: flex-end;
-align-items: center;
-text-align: right;
-align-self: center;
-padding: 16px;
 height: 25%;
+align-self: center;
+justify-content:flex-end;
+align-items: center;
+margin-top: 16px;
+margin-bottom: 20px;
+padding-right: 16px;
 width: 85%;
-font-size: 70px;
 color: black;
-overflow: hidden;
+overflow-x: hidden;
+overflow-y: hidden;
 background-color: #CCD1B5;
+}
+
+.display{
+    margin: 0;
+    height: fit-content;
+    font-size: 9vh;
+    display: flex;
+    justify-content: flex-end;
+    overflow: auto;
 }
 
 .row{
@@ -46,7 +56,7 @@ background-color: #CCD1B5;
 
 button{
     display: inline-block;
-    width: 20%;
+    min-width: 20%;
     border:none;
     font-weight: bolder;
     font-size: x-large;
